# rt-sketch

./: .gitattributes  .gitignore  Cargo.toml  ENCRYPT.md  ENVELOPE_CURVES.md  Makefile  PLAN.md  README.md  build.rs  draw_examples.sh  gen_single_style_stamps.sh  gen_stamps.sh  launch.sh  mediamtx.yml  stamp-lib.csv.example  svg-debug.html
.github/workflows/: pages.yml  release.yml
crates/rt-drawing/: Cargo.toml
crates/rt-drawing/src/: basis.rs  curve.rs  lib.rs  render.rs
crates/rt-protocol/: Cargo.toml
crates/rt-protocol/src/: lib.rs
crates/rt-sketch/: Cargo.toml
crates/rt-sketch/src/: config.rs  frame_source.rs  main.rs  stream_output.rs  tcp_output.rs
crates/rt-sketch/src/drawing/: basis.rs  render.rs
crates/rt-sketch/src/engine/: canvas.rs  mod.rs  stamp.rs
crates/rt-sketch/src/web/: mod.rs
crates/rt-sketch/src/web/static/: app.js  index.html  style.css
crates/rt-viewer/: Cargo.toml  build.rs
crates/rt-viewer/src/: main.rs  tcp_server.rs
crates/rt-viewer/src/static/: viewer.css  viewer.html  viewer.js
src/: config.rs  frame_source.rs  main.rs  output.rs  tcp_output.rs
src/engine/: canvas.rs  mod.rs  sampler.rs  scorer.rs
src/viewer/: main.rs  tcp_server.rs
src/viewer/static/: viewer.css  viewer.html  viewer.js
src/web/: mod.rs
src/web/static/: app.js  index.html  style.css
