[package]
name = "rt-viewer"
version = "0.1.0"
edition = "2021"
description = "Multi-instance viewer for rt-sketch"

[dependencies]
rt-protocol = { path = "../rt-protocol" }

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime + web server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
